[gd_scene load_steps=4 format=3 uid="uid://u06h4g8qfl10"]

[ext_resource type="Script" uid="uid://b7hs81645ixjk" path="res://shield.gd" id="1_vuocu"]
[ext_resource type="Texture2D" uid="uid://dym5hrq3qakxw" path="res://art/HexShield_Blue.png" id="2_ffst0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dmnlx"]
radius = 45.01111

[node name="Shield" type="Area2D" groups=["shields"]]
script = ExtResource("1_vuocu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dmnlx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ffst0")

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
